update to the buttons

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
             <div class="buttons" style="padding: 300px 600px;">
                 <div class="buttona">
-                    <button>Learn more</button>
+                    <a href="">Learn more</a>
                 </div>
                 <div class="buttonb">
-                    <button>Buy now</button>
+                    <a href="">Buy now</a>
                 </div>
             </div>
         </div>
@@ -48,10 +48,10 @@
         <div class="nonpro">
             <div class="buttons" style="padding: 500px 600px;">
                 <div class="buttona">
-                    <button>Learn more</button>
+                    <a href="">Learn more</a>
                 </div>
                 <div class="buttonb">
-                    <button>Buy now</button>
+                    <a href="">Buy now</a>
                 </div>
             </div>
         </div>
@@ -61,10 +61,10 @@
             <h2 style="padding: 0px 650px;">thrilstain classic</h2>
             <div style="padding: 0px 600px;">
                 <div class="buttona">
-                    <button>Learn more</button>
+                    <a href="">Learn more</a>
                 </div>
                 <div class="buttonb">
-                    <button>Buy now</button>
+                    <a href="">Buy now</a>
                 </div>
             </div>
             
@@ -81,10 +81,10 @@
                     <div>
                         <div>
                             <div class="buttona">
-                                <button>Learn more</button>
+                                <a href="">Learn more</a>
                             </div>
                             <div class="buttonb">
-                                <button>Buy now</button>
+                                <a href="">Buy now</a>
                             </div>
                         </div>
                     </div>
@@ -99,10 +99,10 @@
                     <div>
                         <div>
                             <div class="buttona">
-                                <button>Learn more</button>
+                                <a href="">Learn more</a>
                             </div>
                             <div class="buttonb">
-                                <button>Buy now</button>
+                                <a href="">Buy now</a>
                             </div>
                         </div>
                     </div>
@@ -119,10 +119,10 @@
                     <div>
                         <div>
                             <div class="buttona">
-                                <button>Learn more</button>
+                                <a href="">Learn more</a>
                             </div>
                             <div class="buttonb">
-                                <button>Buy now</button>
+                                <a href="">Buy now</a>
                             </div>
                         </div>
                     </div>
@@ -137,10 +137,10 @@
                     <div>
                         <div>
                             <div class="buttona">
-                                <button>Learn more</button>
+                                <a href="">Learn more</a>
                             </div>
                             <div class="buttonb">
-                                <button>Buy now</button>
+                                <a href="">Buy now</a>
                             </div>
                         </div>
                     </div>
@@ -157,10 +157,10 @@
                     <div>
                         <div>
                             <div class="buttona">
-                                <button>Learn more</button>
+                                <a href="">Learn more</a>
                             </div>
                             <div class="buttonb">
-                                <button>Buy now</button>
+                                <a href="">Buy now</a>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                     <div>
                         <div>
                             <div class="buttona">
-                                <button>get your estimate</button>
+                                <a href="">get your estimate</a>
                             </div>
                         </div>
                     </div>
